--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -19,6 +19,22 @@ services:
       - .env
     volumes:
       - mydatabase:/var/lib/mysql
+  
+  nginx:
+    container_name: nginx
+    image: jonasl/nginx-certbot
+    restart: always
+    environment:
+      - CERTBOT_EMAIL=malikbaker75@gmail.com
+    ports:
+      - 80:80
+      - 443:443
+    volumes:
+      - nginx_secrets:/etc/letsencrypt
+      - ./user_conf.d:/etc/nginx/user_conf.d
+    depends_on:
+      - myportfolio
 
 volumes:
   mydatabase:
+  nginx_secrets:
