--- a/user_conf.d/myportfolio.conf
+++ b/user_conf.d/myportfolio.conf
@@ -15,7 +15,7 @@ server {
     server_name malbaker.duckdns.org;
     # Reverse proxy traffic to portfolio container
     location / {
-        proxy_pass https://myportfolio:5000/;
+        proxy_pass http://myportfolio:5000/;
     }
 
     # Load the server certificate files
